abstract public class FarmAnimal extends Animal {
    private String name;

    public FarmAnimal(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

}
